Add comprehensive project documentation and development tools
Co-authored-by: dingjiangying <dingjiangying@meituan.com>