@@ -1,181 +1,213 @@
 # 💻 开发指南
 
-本文档为芋道项目的开发者提供详细的开发环境配置、代码规范和最佳实践指导。
+> **快速上手企业级开发，掌握最佳实践！**
 
-## 🛠 开发环境配置
+<div align="center">
 
-### IDE 配置
+[![IntelliJ IDEA](https://img.shields.io/badge/IntelliJ%20IDEA-推荐-blue.svg)](https://www.jetbrains.com/idea/)
+[![Spring Boot](https://img.shields.io/badge/Spring%20Boot-2.7.18-brightgreen.svg)](https://spring.io/projects/spring-boot)
+[![Code Style](https://img.shields.io/badge/代码规范-阿里巴巴-orange.svg)](https://github.com/alibaba/p3c)
 
-#### IntelliJ IDEA（推荐）
-1. **导入项目**
-   ```
-   File → New → Project from Existing Sources
-   选择项目根目录的 pom.xml
-   ```
+</div>
 
-2. **安装必需插件**
-   - Lombok Plugin
-   - MyBatis X
-   - Free MyBatis Plugin
-   - Maven Helper
+## 🛠 开发环境搭建
 
-3. **代码格式化配置**
-   - 导入 `script/idea/settings.jar` 配置文件
-   - 设置编码为 UTF-8
-   - 设置 Tab 为 4 个空格
+### IDE 推荐配置
 
-4. **启动配置**
-   ```
-   Main class: cn.iocoder.yudao.server.YudaoServerApplication
-   VM options: -Dspring.profiles.active=local
-   ```
+#### ⚡ IntelliJ IDEA（强烈推荐）
 
-### 数据库配置
+```bash
+# 1. 必装插件
+- Lombok Plugin
+- MyBatis X
+- Maven Helper
+- Alibaba Java Coding Guidelines
 
-#### MySQL 配置
-```sql
--- 创建数据库
-CREATE DATABASE ruoyi_vue_pro DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci;
+# 2. 导入代码风格
+导入：script/idea/settings.jar
 
--- 创建用户（可选）
-CREATE USER 'yudao'@'localhost' IDENTIFIED BY 'yudao123';
-GRANT ALL PRIVILEGES ON ruoyi_vue_pro.* TO 'yudao'@'localhost';
-FLUSH PRIVILEGES;
+# 3. 启动配置
+Main class: cn.iocoder.yudao.server.YudaoServerApplication
+VM options: -Dspring.profiles.active=local
 ```
 
-#### 多数据库支持
-项目支持多种数据库，配置文件位于 `sql/` 目录：
-- MySQL: `sql/mysql/`
-- Oracle: `sql/oracle/`
-- PostgreSQL: `sql/postgresql/`
-- SQL Server: `sql/sqlserver/`
-- 国产数据库：达梦、人大金仓、openGauss 等
+<details>
+<summary>🔧 <strong>IDEA 优化配置</strong></summary>
 
-### 环境配置文件
+```bash
+# VM 配置优化
+-Xmx2048m
+-XX:+UseConcMarkSweepGC
+-XX:SoftRefLRUPolicyMSPerMB=50
 
-#### 开发环境 (application-local.yaml)
-```yaml
-spring:
-  datasource:
-    dynamic:
-      primary: master
-      datasource:
-        master:
-          url: jdbc:mysql://127.0.0.1:3306/ruoyi_vue_pro?useSSL=false&serverTimezone=Asia/Shanghai
-          username: root
-          password: 123456
-  redis:
-    host: 127.0.0.1
-    port: 6379
-    database: 1
+# 编码设置
+File → Settings → Editor → File Encodings
+设置为 UTF-8
 
-logging:
-  level:
-    cn.iocoder.yudao.module: debug
+# 自动导包
+File → Settings → Editor → General → Auto Import
+勾选所有选项
 ```
 
-## 📐 代码规范
+</details>
 
-### 包结构规范
+## 🚀 核心开发技能
+
+### 🎯 项目结构理解
+
 ```
-cn.iocoder.yudao.module.{module}
-├── controller/     # 控制器层
-├── service/        # 业务逻辑层
-│   └── impl/      # 实现类
-├── dal/           # 数据访问层
-│   ├── dataobject/ # 数据对象（DO）
-│   └── mysql/     # MyBatis Mapper
-├── convert/       # 对象转换类
-├── vo/            # 视图对象
-│   ├── req/       # 请求对象
-│   └── resp/      # 响应对象
-└── enums/         # 枚举类
+yudao-module-{module}/
+├── controller/         # 控制器层 - 接收请求
+├── service/           # 业务逻辑层 - 核心业务
+│   └── impl/         # 实现类
+├── dal/              # 数据访问层
+│   ├── dataobject/   # 数据对象(DO)
+│   └── mysql/        # MyBatis Mapper
+├── convert/          # 对象转换类
+├── vo/               # 视图对象
+│   ├── req/         # 请求对象
+│   └── resp/        # 响应对象
+└── enums/            # 枚举类
 ```
 
-### 命名规范
+### 🔥 必会开发模式
 
-#### 类命名
-- Controller: `{模块}{功能}Controller`
-- Service: `{模块}{功能}Service`
-- ServiceImpl: `{模块}{功能}ServiceImpl`
-- Mapper: `{模块}{功能}Mapper`
-- DO: `{模块}{功能}DO`
-- VO: `{模块}{功能}{Req/Resp}VO`
+#### 1. CRUD 标准开发流程
 
-#### 方法命名
-- 查询列表: `get{模块}Page`
-- 查询详情: `get{模块}`
-- 新增: `create{模块}`
-- 修改: `update{模块}`
-- 删除: `delete{模块}`
-
-### 注释规范
-
-#### 类注释
 ```java
-/**
- * {功能描述} Service 接口
- *
- * @author {作者}
- */
+// 1. 创建 DO (Data Object)
+@TableName("system_user")
+public class UserDO extends BaseDO {
+    private Long id;
+    private String username;
+    // ...
+}
+
+// 2. 创建 Mapper
+@Mapper
+public interface UserMapper extends BaseMapperX<UserDO> {
+    default PageResult<UserDO> selectPage(UserPageReqVO reqVO) {
+        return selectPage(reqVO, new LambdaQueryWrapperX<UserDO>()
+                .likeIfPresent(UserDO::getUsername, reqVO.getUsername())
+                .betweenIfPresent(UserDO::getCreateTime, reqVO.getCreateTime()));
+    }
+}
+
+// 3. 创建 Service
+@Service
+public class UserServiceImpl implements UserService {
+    
+    @Override
+    public Long createUser(UserCreateReqVO createReqVO) {
+        // 校验用户名唯一性
+        validateUserUnique(createReqVO.getUsername());
+        
+        // 插入用户
+        UserDO user = UserConvert.INSTANCE.convert(createReqVO);
+        userMapper.insert(user);
+        return user.getId();
+    }
+}
+
+// 4. 创建 Controller
+@RestController
+@RequestMapping("/admin-api/system/user")
+public class UserController {
+    
+    @PostMapping("/create")
+    @PreAuthorize("@ss.hasPermission('system:user:create')")
+    public CommonResult<Long> createUser(@Valid @RequestBody UserCreateReqVO createReqVO) {
+        return success(userService.createUser(createReqVO));
+    }
+}
 ```
 
-#### 方法注释
-```java
-/**
- * 创建{功能}
- *
- * @param createReqVO 创建信息
- * @return 编号
- */
-```
+#### 2. 统一异常处理
 
-### 异常处理
-
-#### 自定义异常
 ```java
 // 定义错误码
-ErrorCodeConstants.USER_NOT_EXISTS = new ErrorCode(1_002_001_000, "用户不存在");
+public interface ErrorCodeConstants {
+    ErrorCode USER_NOT_EXISTS = new ErrorCode(1_002_001_000, "用户不存在");
+    ErrorCode USERNAME_DUPLICATE = new ErrorCode(1_002_001_001, "用户名已存在");
+}
 
-// 抛出异常
-throw exception(USER_NOT_EXISTS);
+// 使用异常
+public void validateUserUnique(String username) {
+    if (userMapper.selectByUsername(username) != null) {
+        throw exception(USERNAME_DUPLICATE);
+    }
+}
 ```
 
-#### 统一返回格式
+#### 3. 权限控制
+
 ```java
-// 成功返回
-return success(data);
+// 菜单权限
+@PreAuthorize("@ss.hasPermission('system:user:query')")
 
-// 失败返回（会被全局异常处理器处理）
-throw exception(ERROR_CODE);
+// 数据权限
+@DataPermission(enable = false) // 禁用数据权限
+@DataPermission(enable = true, includeScope = DeptDataPermissionRespVO.class)
+
+// 多租户
+@TenantIgnore // 忽略多租户
 ```
 
-## 🔧 开发工具
+## 🧰 开发神器
 
 ### 代码生成器
-1. 访问：http://localhost:48080
-2. 系统管理 → 代码生成
-3. 选择数据表 → 生成代码
-4. 支持生成：Controller、Service、Mapper、Vue页面
 
-### 数据库文档生成
 ```bash
-# 访问数据库文档
+# 1. 访问代码生成
+http://localhost:48080 → 系统管理 → 代码生成
+
+# 2. 一键生成
+- Controller (控制器)
+- Service (业务层)  
+- Mapper (数据层)
+- Vue 页面
+- SQL 脚本
+```
+
+### 接口调试
+
+```bash
+# Swagger 文档
+http://localhost:48080/doc.html
+
+# 接口测试
+http://localhost:48080/swagger-ui
+
+# 数据库文档
 http://localhost:48080/doc/db
 ```
 
-### API 文档
-```bash
-# Swagger UI
-http://localhost:48080/swagger-ui
+### 实用工具类
 
-# Knife4j 增强版
-http://localhost:48080/doc.html
+```java
+// 1. 集合工具
+CollUtil.isEmpty(list)
+CollUtil.convertList(list, User::getName)
+
+// 2. 字符串工具  
+StrUtil.isBlank(str)
+StrUtil.format("用户{}不存在", username)
+
+// 3. 日期工具
+LocalDateTimeUtil.now()
+LocalDateTimeUtil.parse("2023-01-01 12:00:00")
+
+// 4. Bean 拷贝
+BeanUtil.copyProperties(source, target)
+
+// 5. 分页工具
+PageUtils.build(pageNo, pageSize)
 ```
 
-## 🧪 单元测试
+## 🧪 测试最佳实践
 
-### 测试规范
+### 单元测试模板
+
 ```java
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.NONE)
 class UserServiceImplTest extends BaseDbUnitTest {
@@ -185,160 +217,214 @@ class UserServiceImplTest extends BaseDbUnitTest {
 
     @Test
     public void testCreateUser_success() {
-        // given
-        UserCreateReqVO reqVO = randomPojo(UserCreateReqVO.class);
+        // given - 准备数据
+        UserCreateReqVO reqVO = randomPojo(UserCreateReqVO.class, 
+            o -> o.setUsername("test"));
         
-        // when
+        // when - 执行操作
         Long userId = userService.createUser(reqVO);
         
-        // then
+        // then - 验证结果
         assertNotNull(userId);
         UserDO user = userService.getUser(userId);
         assertPojoEquals(reqVO, user);
     }
-}
-```
-
-### 运行测试
-```bash
-# 运行所有测试
-mvn test
-
-# 运行特定模块测试
-mvn test -pl yudao-module-system
-
-# 跳过测试
-mvn install -Dmaven.test.skip=true
-```
-
-## 🔒 权限开发
-
-### 菜单权限
-```java
-@PreAuthorize("@ss.hasPermission('system:user:query')")
-@GetMapping("/page")
-public CommonResult<PageResult<UserRespVO>> getUserPage(@Valid UserPageReqVO pageVO) {
-    // 实现代码
-}
-```
-
-### 数据权限
-```java
-@DataPermission(enable = false) // 禁用数据权限
-public List<UserDO> getUserList() {
-    // 实现代码
-}
-```
-
-## 🔄 工作流开发
-
-### 流程定义
-1. 工作流程 → 流程模型 → 新建流程
-2. 选择设计器类型：BPMN 或 仿钉钉
-3. 设计流程图并发布
-
-### 业务集成
-```java
-@Service
-public class LeaveServiceImpl implements LeaveService {
-
-    @Resource
-    private ProcessInstanceApi processInstanceApi;
-
-    @Override
-    @Transactional(rollbackFor = Exception.class)
-    public Long createLeave(LeaveCreateReqVO createReqVO) {
-        // 1. 插入请假申请
-        LeaveDO leave = LeaveConvert.INSTANCE.convert(createReqVO);
-        leaveMapper.insert(leave);
-
-        // 2. 发起工作流
-        String processInstanceId = processInstanceApi.createProcessInstance(
-                createReqVO.getUserId(), 
-                "leave", 
-                createReqVO);
-
-        // 3. 更新流程实例编号
-        leave.setProcessInstanceId(processInstanceId);
-        leaveMapper.updateById(leave);
-
-        return leave.getId();
+    
+    @Test
+    public void testCreateUser_usernameDuplicate() {
+        // given
+        insertUser(o -> o.setUsername("test"));
+        UserCreateReqVO reqVO = randomPojo(UserCreateReqVO.class, 
+            o -> o.setUsername("test"));
+        
+        // when & then
+        assertServiceException(() -> userService.createUser(reqVO), 
+            USERNAME_DUPLICATE);
     }
 }
 ```
 
-## 📊 性能优化
+### Mock 测试技巧
 
-### 数据库优化
-1. **索引优化**：为常用查询字段添加索引
-2. **SQL优化**：避免 N+1 查询，使用批量操作
-3. **分页查询**：大数据量使用游标分页
-
-### 缓存优化
 ```java
+@MockBean
+private RedisTemplate<String, String> redisTemplate;
+
+@Test
+public void testWithMock() {
+    // Mock 返回值
+    when(redisTemplate.opsForValue().get("key")).thenReturn("value");
+    
+    // 验证调用
+    verify(redisTemplate).opsForValue();
+}
+```
+
+## 🎨 代码规范速查
+
+### 命名规范
+
+| 类型 | 规范 | 示例 |
+|------|------|------|
+| Controller | `{模块}{功能}Controller` | `UserController` |
+| Service | `{模块}{功能}Service` | `UserService` |
+| DO | `{模块}{功能}DO` | `UserDO` |
+| VO | `{模块}{功能}{类型}VO` | `UserCreateReqVO` |
+
+### 方法命名
+
+| 操作 | 命名 | 示例 |
+|------|------|------|
+| 查询分页 | `get{模块}Page` | `getUserPage` |
+| 查询详情 | `get{模块}` | `getUser` |
+| 创建 | `create{模块}` | `createUser` |
+| 更新 | `update{模块}` | `updateUser` |
+| 删除 | `delete{模块}` | `deleteUser` |
+
+## 🔧 常用开发技巧
+
+### 1. 快速生成测试数据
+
+```java
+// 使用 RandomUtils 生成测试数据
+UserDO user = randomPojo(UserDO.class, o -> {
+    o.setId(null); // 不设置ID
+    o.setUsername("test" + randomString()); // 随机用户名
+});
+```
+
+### 2. 数据库操作技巧
+
+```java
+// 批量插入
+userMapper.insertBatch(userList);
+
+// 条件构造器
+LambdaQueryWrapperX<UserDO> query = new LambdaQueryWrapperX<UserDO>()
+    .eqIfPresent(UserDO::getStatus, reqVO.getStatus())
+    .likeIfPresent(UserDO::getUsername, reqVO.getUsername())
+    .betweenIfPresent(UserDO::getCreateTime, reqVO.getCreateTime());
+```
+
+### 3. 缓存使用技巧
+
+```java
+// Spring Cache
 @Cacheable(value = "user", key = "#id")
 public UserDO getUser(Long id) {
     return userMapper.selectById(id);
 }
 
-@CacheEvict(value = "user", key = "#id")
-public void deleteUser(Long id) {
-    userMapper.deleteById(id);
-}
+// Redis 工具类
+stringRedisTemplate.opsForValue().set("key", "value", Duration.ofMinutes(30));
 ```
 
-### 异步处理
+### 4. 异步处理
+
 ```java
-@Async
-public void sendEmail(String email, String content) {
+@Async("taskExecutor")
+public CompletableFuture<Void> sendEmailAsync(String email, String content) {
     // 异步发送邮件
+    emailService.send(email, content);
+    return CompletableFuture.completedFuture(null);
 }
 ```
 
-## 🚀 部署优化
+## 🐛 调试技巧
 
-### JVM 参数优化
+### 1. 日志调试
+
+```java
+// 使用 Slf4j
+@Slf4j
+@Service
+public class UserServiceImpl {
+    
+    public void createUser(UserCreateReqVO reqVO) {
+        log.debug("创建用户，参数：{}", reqVO);
+        // 业务逻辑
+        log.info("用户创建成功，ID：{}", user.getId());
+    }
+}
+```
+
+### 2. 远程调试
+
 ```bash
-java -jar yudao-server.jar \
-  -Xms2g -Xmx2g \
-  -XX:+UseG1GC \
-  -XX:+HeapDumpOnOutOfMemoryError \
-  -XX:HeapDumpPath=/logs/heapdump.hprof
+# 启动时加上调试参数
+java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -jar app.jar
+
+# IDEA 配置远程调试
+Run → Edit Configurations → + → Remote JVM Debug
 ```
 
-### 监控配置
+### 3. 性能分析
+
+```bash
+# JVM 参数
+-XX:+PrintGCDetails
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/logs/heapdump.hprof
+
+# 分析工具
+jstack <pid>  # 线程栈
+jmap -dump:format=b,file=heap.dump <pid>  # 内存快照
+```
+
+## 🚀 性能优化建议
+
+### 1. SQL 优化
+
+```sql
+-- 添加索引
+ALTER TABLE system_user ADD INDEX idx_username (username);
+
+-- 避免 SELECT *
+SELECT id, username, status FROM system_user WHERE status = 1;
+
+-- 使用 LIMIT
+SELECT * FROM system_user ORDER BY id DESC LIMIT 10;
+```
+
+### 2. 缓存策略
+
+```java
+// 缓存热点数据
+@Cacheable(value = "user", key = "#id", condition = "#id != null")
+
+// 缓存失效策略
+@CacheEvict(value = "user", key = "#user.id")
+
+// 缓存更新
+@CachePut(value = "user", key = "#user.id")
+```
+
+### 3. 连接池配置
+
 ```yaml
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,metrics,prometheus
-  endpoint:
-    health:
-      show-details: always
+spring:
+  datasource:
+    druid:
+      initial-size: 5
+      max-active: 20
+      min-idle: 5
+      max-wait: 60000
 ```
-
-## 🐛 常见问题
-
-### 1. 编译问题
-**问题**：Lombok 注解不生效
-**解决**：安装 Lombok 插件并重启 IDE
-
-### 2. 数据库问题
-**问题**：时区问题导致时间错误
-**解决**：URL 添加 `serverTimezone=Asia/Shanghai`
-
-### 3. 缓存问题
-**问题**：Redis 连接超时
-**解决**：检查网络连接和 Redis 配置
-
-### 4. 权限问题
-**问题**：接口返回 403 无权限
-**解决**：检查用户角色权限配置
 
 ## 📚 学习资源
 
-- [Spring Boot 官方文档](https://spring.io/projects/spring-boot)
-- [MyBatis Plus 官方文档](https://mp.baomidou.com/)
-- [Spring Security 官方文档](https://spring.io/projects/spring-security)
-- [芋道源码](https://www.iocoder.cn/) - 作者的技术博客
+| 资源 | 链接 | 说明 |
+|------|------|------|
+| 🎥 视频教程 | [B站教程](https://doc.iocoder.cn/video/) | 项目讲解视频 |
+| 📖 在线文档 | [官方文档](https://doc.iocoder.cn/) | 详细开发文档 |
+| 💬 技术交流 | QQ群：3147719 | 开发问题交流 |
+| 🐛 问题反馈 | [Gitee Issues](https://gitee.com/zhijiantianya/ruoyi-vue-pro/issues) | Bug反馈 |
+
+---
+
+**🎯 快速定位问题**
+
+- 启动问题 → 检查端口、JDK版本、数据库连接
+- 权限问题 → 检查 `@PreAuthorize` 注解和角色配置  
+- 数据问题 → 检查多租户、数据权限配置
+- 性能问题 → 开启SQL日志、检查索引、分析慢查询
